examples/invalid/02_top_level_let_forward_value.lane
// invalid: top-level let initializers follow ordered value scope
let y : Int = x
let x : Int = 1

